--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,15 +20,18 @@
       "@features/checkbox": ["src/features/checkbox"],
       "@features/delete-button": ["src/features/delete-button"],
       "@features/empty-avatar": ["src/features/empty-avatar"],
+      "@features/image-modal": ["src/features/image-modal"],
       "@features/lang": ["src/features/lang"],
       "@features/login": ["src/features/login"],
       "@features/logo": ["src/features/logo"],
       "@features/video": ["src/features/video"],
+      "@features/confirm-popup": ["src/features/confirm-popup"],
       "@pages": ["src/pages"],
       "@pages/authorization": ["src/pages/authorization"],
       "@pages/main": ["src/pages/main"],
       "@pages/profile": ["src/pages/profile"],
       "@pages/registration": ["src/pages/registration"],
+      "@pages/trusted-profile": ["src/pages/trusted-profile"],
       "@pages/video-page": ["src/pages/video-page"],
       "@shared": ["src/shared/index.ts"],
       "@shared/constants": ["src/shared/constants"],
