--- a/project.json
+++ b/project.json
@@ -17,14 +17,10 @@
         "tsConfig": "./tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": ["./src/assets/favicon/favicon.ico", "./src/assets"],
-        "styles": [
-          "./src/styles/styles.scss"
-        ],
+        "styles": ["./src/styles/styles.scss"],
         "scripts": [],
         "stylePreprocessorOptions": {
-          "includePaths": [
-            "./src/styles"
-          ]
+          "includePaths": ["./src/styles"]
         },
         "server": "src/main.server.ts",
         "prerender": true,
