--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test",
+    "test": "npx nx test",
     "dev:ssr": "nx run org:serve-ssr",
     "serve:ssr": "ts-node ./server.ts",
     "server:ssr": "node ./node_modules/ts-node/dist/bin.js server.ts",
@@ -41,6 +41,7 @@
     "@angular/cli": "~17.0.0",
     "@angular/compiler-cli": "~17.0.0",
     "@angular/language-service": "~17.0.0",
+    "@nrwl/cli": "^15.9.3",
     "@nx/cypress": "17.2.8",
     "@nx/eslint": "17.2.8",
     "@nx/eslint-plugin": "17.2.8",
