--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@angular/platform-server": "~17.0.0",
     "@angular/router": "~17.0.0",
     "@angular/ssr": "~17.0.0",
+    "@ngrx/effects": "^17.1.1",
+    "@ngrx/entity": "^17.1.1",
+    "@ngrx/store": "^17.1.1",
     "@ngrx/store-devtools": "^17.1.1",
     "@nx/angular": "17.2.8",
     "express": "~4.18.2",
