--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,7 @@
 {
-  "singleQuote": true
+  "printWidth": 140,
+  "singleQuote": true,
+  "arrowParens": "avoid",
+  "proseWrap": "never",
+  "trailingComma": "none"
 }
